--- a/ArcsSystem/templates/workpackages/theme_view.html
+++ b/ArcsSystem/templates/workpackages/theme_view.html
@@ -4,6 +4,7 @@
 {% load i18n %}
 
 {% load workpackages_extras %}
+{% load keyword_for_all_extras %}
 
 {% block content %}
 
@@ -50,6 +51,178 @@
 
 
 
+
+{% if request.user.is_superuser %}
+<br><br><hr><br><br>
+
+<datalist id="eng">
+  {% for kw in "eng"|get_keywords %}
+    <option value="{{kw}}"> </option> 
+  {% endfor %}
+  </datalist> 
+
+<datalist id="swe">
+  {% for kw in "swe"|get_keywords %}
+    <option value="{{kw}}"> </option> 
+  {% endfor %}
+
+
+   </datalist>
+
+
+
+<form method="POST">
+
+	{% csrf_token %}
+
+
+	  <div class="col-xxl-5   col-xl-9   col-lg-12 col-md-12 col-sm-12 col-12">
+
+        <h4 align="center" class=""> Nyckelord: </h4>
+        <br>
+        <div class="row">
+          <div class="col-4 col-lg-4 col-md-0 "></div>
+          <div class="col-4 col-sm-12 col-md-12 col-lg-5 ">
+            <h5 align="center">Lägg till nyckelord, gärna med översättnig i motsvarande fält på samma rad</h5>
+            <div class="row">
+              <button type="button" onclick="add_keyword_input_line()" class="col-6 form-control" style="height: 60px; background: MediumSeaGreen; color: white;"> <h4>Add </h4> </button>
+              <button type="button" onclick="remove_keyword_input_line()" class="col-6 form-control" style="height: 60px; background: IndianRed; color: white;"> <h4>Remove</h4></button>
+            </div>
+          </div>
+          <div class="col-4"></div>
+        </div>
+
+        <br> 
+        <br>
+
+        <div class="row">
+          <div class="col-1"></div>
+          <div class="col-5"><h5 align="center">Svenska</h5></div>
+          <div class="col-1">  </div>
+          <div class="col-5"><h5 align="center">Engelska</h5></div>
+        </div>
+
+        <hr>
+
+        <div id="keyword_div">
+
+
+        </div>
+
+      </div>
+
+
+      <br><br><br>
+      <button class="form-control col-4 btn-success" style="font-size: 25px"> Update theme keywords</button>
+	
+
+
+
+
+
+
+    <div style="display: none;">
+
+
+
+      <div id="hidden_keyword_div" class="row" style="border-bottom: 1px solid black">
+
+        <div class="col-1"><span id="hidden_row_number"></span></div>
+
+        <div class="col-5">
+          <input id="hidden_input_sve" list="swe" class="form-control">
+        </div>
+        <div class="col-1"> <h1 align="center">=</h1></div>
+        <div class="col-5">
+          <input id="hidden_input_eng" list="eng" class="form-control">
+
+        </div>
+      </div>
+
+      </div>
+
+</form>
+<script type="text/javascript">
+
+
+
+
+
+  function add_keyword_input_line(sv, en) {
+
+    if( count < 10){
+
+      count += 1
+      var new_keyword_line =  $("#hidden_keyword_div" ).clone();
+      new_keyword_line.attr("id", "keyword_div_" + count)
+      new_keyword_line.find("#hidden_input_eng").attr({"name": "Keyword_eng_" + count, "value" : en })
+      new_keyword_line.find("#hidden_input_sve").attr({"name": "Keyword_sve_" + count, "value" : sv })
+      new_keyword_line.find("#hidden_row_number").html( count)
+      new_keyword_line.appendTo( "#keyword_div" );
+
+    }
+
+    
+
+  }
+
+  function remove_keyword_input_line(){
+    if(count > 1){
+      console.log(  $("#keyword_div_" + count ))
+      $("#keyword_div_" + count ).remove();
+      count -= 1
+    } 
+  }
+
+</script>
+
+
+{% if keyword_len  %}
+
+<script type="text/javascript">
+
+  var count = 0
+
+
+
+</script>
+
+
+{% for line in keyword_line %}
+
+<script type="text/javascript">
+  add_keyword_input_line("{{line.0}}", "{{line.1}}")
+</script>
+
+{% endfor %}
+
+
+
+
+{% else %}
+
+<script type="text/javascript">
+
+  var count = 0 
+
+  add_keyword_input_line()
+
+
+
+</script>
+
+{% endif %}
+
+
+
+
+
+
+
+
+
+
+{% endif %}
 
 
 
