--- a/ArcsSystem/templates/base.html
+++ b/ArcsSystem/templates/base.html
@@ -17,7 +17,7 @@
 		<!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"/>
 		<link href="{% static 'css/base.css' %}" rel="stylesheet"/>
-		<link href="{% static 'css/style.css' %}" rel="stylesheet"/>
+		<link href="{% static 'css/style.css' %}" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Lato|Playfair+Display&display=swap" rel="stylesheet" /> <!--TODO change to serve locally as it does not support integrity hash-->
 		<title>{% block head_title %}Medborgarforskning.se{% endblock head_title %}</title> <!-- TODO replace "Medborgarforskning.se" with django template for the page title -->
     {% block extra_head %}
@@ -28,7 +28,7 @@
 		<div class="container-fluid custom-container">
 			<!-- header -->
 			<div id="main-header" class="row">
-				<div class="col-3 h d-flex align-items-center">
+				<div class=" align-self-center d-none d-md-block col-3 hr">
 					<div class="row">
 						<div class="col-8 social-medias-link">
 							<div class="row">
@@ -56,16 +56,16 @@
 						</div>
 					</div>
 				</div>
-				<div id="website-logo" class="col-6 h d-flex justify-content-center align-items-center">
+				<div id="website-logo" class="col-8 col-md-6 h d-flex justify-content-center align-items-center">
 					<a class="col d-flex justify-content-center align-items-center" href= {% url 'staticpages:homepage_view' %}>
 						<img src="{% static 'icons/medborgarforskning-C-1000px_1.png' %}" alt="{% trans 'Medborgarforskning.se Logo linking to the site homepage' %}"/>
 					</a>
 				</div>
-				<div id="main-header-buttons" class="col-3 h p-0 d-flex align-items-center">
+				<div id="main-header-buttons" class="d-flex align-items-center col-4 col-md-3 h p-0">
 					<div id="header-btn" class="row ">
-						<div class="col-3 p-0 d-flex justify-content-end align-items-center">
+						<div class="justify-content-end align-items-center d-none d-md-block col-md-3 h p-0">
 							<div class="dropdown p-0">
-								<button class="btn p-0 dropdown-toggle font-dark-green-color hide-extend-language-icon" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
+								<button class="btn p-0 dropdown-toggle hide-extend-language-icon" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
 								  <img class="main-media-btns" src="{% static 'icons/Language_Icon_4.png' %}" alt="{% trans 'Globe icon for switching languages' %}"/>
 								  <br>
 								  <strong>Language</strong>
@@ -96,31 +96,29 @@
 								</form>
 							</div>
 						</div>
-						<div class="col-3 p-0 d-flex justify-content-end align-items-center">
-							<button class="btn p-0 font-dark-green-color background-light-green-color">
+						<div class="justify-content-end align-items-center d-none d-md-block col-md-3 h">
+							<button class="btn p-0">
 								<img class="main-media-btns" src="{% static 'icons/Hearing_Icon_3.png' %}" alt="{% trans 'Ear icon to launch text to speech of the current page' %}"/>
 								<br>
 								<strong>Listen</strong>
 							</button>
 						</div>
-
-<!-- user login starts here -->
-
+						<!-- user login starts here -->
 						<!-- user is loged in: show my_page and logout -->
 						{% if user.is_authenticated %}
-							<div id="my_page" class="col-3 p-0 d-flex justify-content-end align-items-center">
-								<button class="btn p-0 font-dark-green-color background-light-green-color" style="float:right;">
-									  	<a href="{% url 'userprofile_private_view' %}">
-											<img class="main-media-btns" src="{% static 'icons/Account_Circle_Icon_5.png' %}" alt="{% trans 'Profile icon for login and account details' %}"/>
-									  		<br>
-											<strong>{{user.get_first_name}}</strong>
-										</a>
+							<div id="my_page" class="justify-content-end align-items-center d-none d-md-block col-md-3 h p-0">
+								<button class="btn p-0" style="float:right; color:black !important;">
+								  	<a href="{% url 'userprofile_private_view' %}">
+										<img class="main-media-btns" src="{% static 'icons/Account_Circle_Icon_5.png' %}" alt="{% trans 'Profile icon for login and account details' %}"/>
+								  		<br>
+										<strong>{{user.get_first_name}}</strong>
+									</a>
 								</button>
 							</div>
 
-							<div id="login" class="col-3 p-0 d-flex justify-content-end align-items-center">
-								<button class="btn p-0 font-dark-green-color background-light-green-color" style="float:right;">
-									  	<a href="{% url 'account_logout' %}">
+							<div id="login" class="d-flex justify-content-end align-items-center col-sm-12 col-md-3 p-0">
+								<button class="btn p-0  " style="float:right; color:black !important;">
+									  	<a href="{% url 'account_logout' %}" >
 											<img class="main-media-btns" src="{% static 'icons/Account_Circle_Icon_5.png' %}" alt="{% trans 'Profile icon for login and account details' %}"/>
 									  		<br>
 											<strong>{% trans "Logout" %}</strong>
@@ -130,9 +128,9 @@
 
 						<!-- user is NOT loged in: show Signup, login -->
 						{% else %}
-							<div id="signup" class="col-3 p-0 d-flex justify-content-end align-items-center">
-								<button class="btn p-0 font-dark-green-color background-light-green-color" style="float:right;">
-									<a class="font-dark-green-color" href="{% url 'account_signup' %}">
+							<div id="signup" class="justify-content-end align-items-center d-none d-md-block col-md-3 p-0">
+								<button class="btn p-0 " style="float:right; color:black !important;">
+									<a href="{% url 'account_signup' %}">
 										<img class="main-media-btns" src="{% static 'icons/Account_Circle_Icon_5.png' %}" alt="{% trans 'Profile icon for login and account details' %}"/>
 										<br>
 										<strong>{% trans "Signup" %}</strong>
@@ -140,9 +138,9 @@
 								</button>
 							</div>
 
-							<div id="logout" class="col-3 p-0 d-flex justify-content-end align-items-center">
-								<button class="btn p-0 font-dark-green-color background-light-green-color" style="float:right;">
-								  	<a class="font-dark-green-color" href="{% url 'account_login' %}">
+							<div id="logout" class="d-flex justify-content-end align-items-center col-sm-12 col-md-3 p-0">
+								<button class="btn p-0 " style="float:right; color:black !important;">
+								  	<a href="{% url 'account_login' %}">
 										<img class="main-media-btns" src="{% static 'icons/Account_Circle_Icon_5.png' %}" alt="{% trans 'Profile icon for login and account details' %}"/>
 		  								<br>
 		  								<strong>{% trans "Login" %}</strong>
@@ -150,25 +148,20 @@
 								</button>
 							</div>
 						{% endif %}
-
-
-
-<!-- user login ends here -->
-
+						<!-- user login ends here -->
 					</div>
 				</div>
 			</div>
 		</div>
 	<!--End of header-->
-		<div class="container-fluid background-dark-green-color" style="padding: 0;">
+		<div class="container-fluid pink-background-color" style="padding: 0;">
 			<div class="custom-container">
 				{% include "nav_main.html" %}
 			</div>
 		</div>
+
 		<!--content-->
-
 		{% block body %}
-
 		{% if messages %}
 		<div>
 			<strong>Messages:</strong>
@@ -179,41 +172,37 @@
 			</ul>
 		</div>
 		{% endif %}
-
 		<main id="content">{# Contents of Main are for the main target of the page. #}
 	  	{% block content %}
 			<h1>{% trans "Medborgarforskning.se!" %}</h1>
 			<p>{% trans "This base.html block should be replaced by a template defined block." %}
 	  	{% endblock content %}
 		</main>
-
-
 		{% endblock body %}
-
 		<hr>
 		<!--Footer -->
 		<div class="container-fluid">
 			<div class="custom-container h">
 				<div class="row footer-menu-nav">
-					<div class="col-6 h" style="padding: 0;">
-						<nav class="navbar navbar-default navbar-expand-lg footer-navbar" style="padding:0;">
-							<!-- Collection of nav links, forms, and other content for toggling -->
-							<div class="collapse navbar-collapse justify-content-start">
-								<ul class="nav navbar-nav">
-									<li class="nav-item"><a class="nav-link pt-0 font-dark-green-color" href="/about/about" style="padding-left: 0;"><strong class="footer-navbar-padding">{% trans "ABOUT US" %}</strong></a></li>
-									<li class="nav-item"><a class="nav-link pt-0 font-dark-green-color" href="/press/"><strong class="footer-navbar-padding">{% trans "PRESS" %}</strong></a></li>
-									<li class="nav-item"><a class="nav-link pt-0 font-dark-green-color" href="/about/contact/"><strong class="footer-navbar-padding">{% trans "CONTACT" %}</strong></a></li>
-									<!--<li class="nav-item"><a class="nav-link pt-0 font-dark-green-color" href="#">{% trans "For Developers-API" %}</a></li>-->
-								</ul>
+					<div class="col-sm-6 h" style="padding: 0;">
+						<div class="row">
+							<div class="col-sm-4">
+								<a class="nav-link pt-0" href="/about/about" style="padding-left: 0;"><strong class="footer-navbar-padding">{% trans "ABOUT US" %}</strong></a>
 							</div>
-						</nav>
+							<div class="col-sm-4 p-0">
+								<a class="nav-link pt-0" href="/press/"><strong class="footer-navbar-padding">{% trans "PRESS" %}</strong></a>
+							</div>
+							<div class="col-sm-4 p-0">
+								<a class="nav-link pt-0" href="/about/contact/"><strong class="footer-navbar-padding">{% trans "CONTACT" %}</strong></a>
+							</div>
+						</div>
 					</div>
-					<div class="col-6 h" style="padding-right: 0;">
+					<div class="col-sm-6 h" style="padding-right: 0;">
 						<div class="row m-0">
-							<div class="col-6 h" style="padding: 0;">
+							<div class="col-sm-6 h" style="padding: 0;">
 								<p class="nav-item font-weight-bold d-flex justify-content-end align-items-center">{% trans "Follow medborgarforskning.se" %}: </p>
 							</div>
-							<div class="col-6 h d-flex justify-content-end " style="padding: 0;">
+							<div class="col-sm-6 h d-flex justify-content-end " style="padding: 0;">
 								<div class="row m-0">
 									<div class="col-3" style="padding-left: 25px;">
 										<a href="#">
@@ -242,7 +231,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="container-fluid background-dark-green-color">
+		<div class="container-fluid background-dark-blue-color">
 			<div class="custom-container">
 				<div class="row main-footer-participiate m-0">
 					<div class="col">
@@ -281,30 +270,18 @@
 							</a>
 						</div>
 						<div class="col-auto">
-
-
-
 								<a href="/about/privacy/">
-
 							<p class="mb-0">{% trans "Privacy policy" %}</p>
-
 							</a>
 						</div>
 						<div class="col-auto">
-
 								<a href="/about/cookies/">
-
 							<p class="mb-0">{% trans "Cookies policy" %}</p>
-
 							</a>
 						</div>
-
 						<div class="col-auto">
-
 								<a href="/about/license/">
-
 							<p class="mb-0">{% trans "License" %}</p>
-
 							</a>
 						</div>
 					</div>
