theme card and singel link nodes for keyword map

--- a/ArcsSystem/templates/keywords/keyword_detail.html
+++ b/ArcsSystem/templates/keywords/keyword_detail.html
@@ -27,7 +27,21 @@
     
 
 
-{{ object|get_all_related:LANGUAGE_CODE|safe  }}
+{% for one_list in  object|get_all_related:LANGUAGE_CODE %}
+
+{{one_list.0|safe}}
+
+<script>
+
+    var data = JSON.parse('{{ one_list.1| escapejs }}');
+    console.log(data.links)
+</script>
+
+
+
+
+{% endfor %}
+
 
 
 
@@ -67,6 +81,19 @@ text {
 
 <script type="text/javascript" src="https://d3js.org/d3.v4.min.js"></script>
 
+<script type="text/javascript">
+
+// Isaks add functions
+
+// calc font size
+
+function calc_font_size(d) {return Math.sqrt(d.value)  + 16};
+
+  
+
+
+</script>
+
 <script>
 
 
@@ -85,12 +112,13 @@ var color = d3.scaleOrdinal(d3.schemeCategory20);
 //.distance(function(d) { return Math.sqrt(d.value) * 2 + 300; })
 
 var simulation = d3.forceSimulation()
-    .force("link", d3.forceLink().id(function(d) { return d.id; }).distance(function(d) { return Math.sqrt(d.value) * 2 + 200; }))
-    .force("charge", d3.forceManyBody().strength(function(d) { return -(d.value**2  + 400); }))
+    .force("link", d3.forceLink().id(function(d) { return d.id; }).distance(function(d) { return 60; })) 
+    //Math.sqrt(d.value) * 2 + 200;
+    .force("charge", d3.forceManyBody().strength(function(d) { return -80; })) 
+    // -(d.value**2  + 400)
     .force("center", d3.forceCenter(width / 2, height / 2));
 
-d3.json("\\media\\miserables.json", function(error, graph) {
-  if (error) throw error;
+
 
   var link = svg.append("g")
       
@@ -98,13 +126,13 @@ d3.json("\\media\\miserables.json", function(error, graph) {
       .attr("class", "links")
     .selectAll("line")
 
-    .data(graph.links)
+    .data(data.links)
 
     .enter().append("line") 
 
       .attr("stroke-width", function(d) { return Math.sqrt(d.value/5); });
 
-  link.attr('opacity', function(d) { return d.value/30 + 0.2; } );
+  link.attr('opacity', function(d) { return d.value/30 + 0.4; } );
 
 
 
@@ -114,13 +142,13 @@ d3.json("\\media\\miserables.json", function(error, graph) {
   var node = svg.append("g")
       .attr("class", "nodes")
     .selectAll("g")
-    .data(graph.nodes)
+    .data(data.nodes)
     .enter().append("g")
 
   var circles = node.append("circle")
 
 
-      .attr("r", function(d) { if(d.value){return d.value*0.8 + 10};  return 5;})
+      .attr("r", function(d) { if(d.value){return d.value};  return 5;})
 
       .attr("id", function(d) { return d.id; })
 
@@ -145,11 +173,11 @@ d3.json("\\media\\miserables.json", function(error, graph) {
       .text(function(d) { return d.id; });
 
   simulation
-      .nodes(graph.nodes)
+      .nodes(data.nodes)
       .on("tick", ticked);
 
   simulation.force("link")
-      .links(graph.links);
+      .links(data.links);
 
   function ticked() {
     link
@@ -165,7 +193,7 @@ d3.json("\\media\\miserables.json", function(error, graph) {
           return "translate(" + d.x + "," + d.y + ")";
         })
   }
-});
+
 
 
 function dragstarted(d) {
@@ -198,18 +226,7 @@ function dragended(d) {
 </script>
 
 
-<script type="text/javascript">
 
-// Isaks add functions
-
-// calc font size
-
-function calc_font_size(d) {return Math.sqrt(d.value)  + 16};
-
-  
-
-
-</script>
 
 
 
