--- a/ArcsSystem/templates/publications/article_publications_detail.html
+++ b/ArcsSystem/templates/publications/article_publications_detail.html
@@ -181,8 +181,10 @@ var color = d3.scaleOrdinal(d3.schemeCategory20);
 //.distance(function(d) { return Math.sqrt(d.value) * 2 + 300; })
 
 var simulation = d3.forceSimulation()
-    .force("link", d3.forceLink().id(function(d) { return d.id; }).distance(function(d) { return Math.sqrt(d.value) * 2 + 200; }))
-    .force("charge", d3.forceManyBody().strength(function(d) { return -(d.value**2  + 400); }))
+    .force("link", d3.forceLink().id(function(d) { return d.id; }).distance(function(d) { return 60; })) 
+    //Math.sqrt(d.value) * 2 + 200;
+    .force("charge", d3.forceManyBody().strength(function(d) { return -80; })) 
+    // -(d.value**2  + 400)
     .force("center", d3.forceCenter(width / 2, height / 2));
 
 
@@ -199,7 +201,7 @@ var simulation = d3.forceSimulation()
 
       .attr("stroke-width", function(d) { return Math.sqrt(d.value/5); });
 
-  link.attr('opacity', function(d) { return d.value/30 ; } );
+  link.attr('opacity', function(d) { return d.value/30 + 0.4 ; } );
 
 
 
@@ -215,7 +217,7 @@ var simulation = d3.forceSimulation()
   var circles = node.append("circle")
 
 
-      .attr("r", function(d) { if(d.value){return d.value * 1};  return 5;})
+      .attr("r", function(d) { if(d.value){return d.value};  return 5;})
 
       .attr("id", function(d) { return d.id; })
 
