--- a/ArcsSystem/templates/blog/blog_detail.html
+++ b/ArcsSystem/templates/blog/blog_detail.html
@@ -12,9 +12,8 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-9">
+        <div class="col-sm-9">
             <div class="row" style="border-bottom: 1px solid;">
-
                 <nav aria-label="breadcrumb">
                   <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="{% url 'staticpages:homepage_view' %}"> Home </a></li>
@@ -35,53 +34,14 @@
                     <p>{{ post.content }}</p>
                 </div>
             </div>
-            <div class="row">
-                <div class="col">
-                    <div class="accordion ">
-                      <div class="accordion__item">
-                        <div class="accordion__item__header" >
-                         <p class="home-page-buttons bold"> THEME 1</p>
-                        </div>
-
-                        <div class="accordion__item__content">
-                            <p> Explain of your item goes here...</p>
-                        </div>
-                        </div>
-                            <div class="accordion__item">
-                        <div class="accordion__item__header">
-                            <p class="home-page-buttons bold"> THEME 2</p>
-                        </div>
-
-                        <div class="accordion__item__content">
-                            <p> Explain of your item goes here...</p>
-                        </div>
-                      </div>
-                            <div class="accordion__item">
-                        <div class="accordion__item__header">
-                            <p class="home-page-buttons bold"> THEME 3</p>
-                        </div>
-
-                        <div class="accordion__item__content">
-                          <p> Explain of your item goes here...</p>
-                         </div>
-                      </div>
-                    </div> <!-- id accordion end -->
-                </div>
-            </div>
         </div>
-        <div class="col-3">
+        <div class="col-sm-3">
             <div class="row visual-Mindmap-style">
-                <div class="col">
-                    <h1 > Visual - linked </h1>
-                    <img class="img-fluid" src="{% static "devplaceholder/open-book-1428428_1920.jpg" %}" alt="{% trans '' %}"/>
-                </div>
-            </div>
-            <div class="row visual-Mindmap-style">
-                <div class="col">
+                <div class="col-sm h" style:"word-wrap:break-word ">
                     <h2>{% trans "Related publications" %}</h2>
                     {% with post.tags.names|query_publications:5 as blog_sidebar_papers %}
                         {% for q in blog_sidebar_papers %}
-                            <p><a href="{% url 'publications:article_publications_detail' q.id %}">{{ q }} </a></p>
+                            <p><a href="{% url 'publications:article_publications_detail' q.id %}">{{ q|break_text:20|safe }} </a></p>
                         {% endfor %}
                     {% endwith %}
                 </div>
