Edited docker-compose.yaml to correct directory for /media/. Also changed title in navbar for knowledge base

--- a/ArcsSystem/templates/nav_main.html
+++ b/ArcsSystem/templates/nav_main.html
@@ -36,7 +36,7 @@
 
              <li class="nav-item header-menu-li-style col-sm-3">
                <a class="nav-link dropdown-toggle main-menu-buttons-font text-wrap" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="width: 13rem;">
-                     {% trans "Citizen Science in Practice" %}
+                     {% trans "Knowledge base" %}
                 </a>
                 <div class="dropdown-menu main-menu-buttons " aria-labelledby="navbarDropdown">
                     <a class="dropdown-item font-weight-bold" href="{% url 'workpackages:category_view' %}">{%trans "ARCS knowledge base" %}</a>
