--- a/ArcsSystem/templates/workpackages/theme_view.html
+++ b/ArcsSystem/templates/workpackages/theme_view.html
@@ -8,6 +8,14 @@
 
 {% block content %}
 
+<style type="text/css">
+
+
+  
+
+
+</style>
+
 <div style="margin-right: 30px; margin-left: 30px">
 
 
@@ -113,7 +121,12 @@
 
 
       <br><br><br>
+
+      <div>
+
       <button class="form-control col-4 btn-success" style="font-size: 25px"> Update theme keywords</button>
+
+      </div>
 	
 
 
@@ -130,11 +143,11 @@
         <div class="col-1"><span id="hidden_row_number"></span></div>
 
         <div class="col-5">
-          <input id="hidden_input_sve" list="swe" class="form-control">
+          <input id="hidden_input_swe" autocomplete="off"  list="swe" class="form-control trans-option">
         </div>
         <div class="col-1"> <h1 align="center">=</h1></div>
         <div class="col-5">
-          <input id="hidden_input_eng" list="eng" class="form-control">
+          <input id="hidden_input_eng" autocomplete="off"  list="eng" class="form-control trans-option">
 
         </div>
       </div>
@@ -156,7 +169,7 @@
       var new_keyword_line =  $("#hidden_keyword_div" ).clone();
       new_keyword_line.attr("id", "keyword_div_" + count)
       new_keyword_line.find("#hidden_input_eng").attr({"name": "Keyword_eng_" + count, "value" : en })
-      new_keyword_line.find("#hidden_input_sve").attr({"name": "Keyword_sve_" + count, "value" : sv })
+      new_keyword_line.find("#hidden_input_swe").attr({"name": "Keyword_sve_" + count, "value" : sv })
       new_keyword_line.find("#hidden_row_number").html( count)
       new_keyword_line.appendTo( "#keyword_div" );
 
@@ -168,7 +181,6 @@
 
   function remove_keyword_input_line(){
     if(count > 1){
-      console.log(  $("#keyword_div_" + count ))
       $("#keyword_div_" + count ).remove();
       count -= 1
     } 
@@ -212,6 +224,101 @@
 </script>
 
 {% endif %}
+
+
+
+<script type="text/javascript">
+
+function trans_resiver(string) {
+  if(string.slice(-3,) == "swe"){
+    return "eng";
+  };
+  if(string.slice(-3,) == "eng"){
+    return "swe";
+  };
+  return "";
+}
+
+  
+
+$(document).ready(function () {
+    var id_count = 0;
+    var sender_input;
+
+    $(document).on("change",'.trans-option', function(){
+
+      $(this).val($(this).val().trim().replace(/[^a-zA-Z0-9ä-öÄ-Ö().&: -]/g, ""));
+
+
+
+
+
+      if($(this).val().length == 0){
+         $(this).parent().parent().find(":input:not([id="+$(this).attr("id")+"])").attr("list", trans_resiver($(this).attr("list")));
+         console.log("stop at input");
+         return;
+
+      }
+
+
+      if($(this).attr("list").length != 3){
+        console.log("stop at list")
+        return;
+      };
+
+      if($(this).attr("list") == "swe"){
+        var input_string = "#hidden_input_eng";
+      }
+      else if($(this).attr("list") == "eng"){
+        var input_string = "#hidden_input_swe";
+      };
+
+      sender_input = $(this).parent().parent().find(":input:not([id="+$(this).attr("id")+"])");
+
+      if ( $('#'+$(this).attr("list")+' option[value="'+ $(this).val() + '"]').length == 0){
+        console.log("stop at option")
+
+        return;
+
+      };  
+
+      console.log("ajax")
+      $.ajax({
+          type: "GET",
+          url: "{% url 'workpackages:ajax_get_trans' %}",
+          data: { "lang": $(this).attr("list"), "kw": $(this).val() },
+
+          success: function(data){
+
+              var dtl = document.getElementById("opt-trans").appendChild(document.createElement('datalist'));
+              var id_string ="trl_" + id_count;
+              id_count += 1;
+              dtl.id = id_string;
+              $(sender_input).attr('list', id_string);
+              var opt = "";
+              for (var i = 0; i < data.trans.length; i++) {
+                opt += "<option value='" + data.trans[i] + "' />";
+              };
+              dtl.innerHTML = opt;
+              sender_input.select();
+          }
+        });
+    });
+
+});
+
+
+</script>
+
+
+
+
+<div id="opt-trans">
+
+
+  
+
+</div>
 
 
 
